# superquadrics

./: LICENSE  README.md  pyproject.toml  quadric_plotting.py  superquadric_helpers.py
.github/workflows/: ci.yml
examples/: shape_chart.py  visualize.py
superquadrics/: __init__.py  core.py  plotting.py
tests/: test_core.py  test_plotting.py
