[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "superquadrics"
version = "0.1.0"
description = "Superquadric geometry and Open3D/PyVista visualization"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["numpy", "scipy"]

[project.optional-dependencies]
# Pick the backend you want; both are lazily imported, so installing just one
# is enough to use that plotter. ``viz`` is a convenience for both.
open3d = ["open3d"]
pyvista = ["pyvista"]
viz = ["open3d", "pyvista"]
examples = ["open3d", "pyvista", "pillow"]
dev = ["pytest", "pillow"]

[tool.hatch.build.targets.wheel]
packages = ["superquadrics"]
