[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "superquadrics"
version = "0.1.0"
description = "Superquadric geometry and Open3D/PyVista visualization"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Lukas Brunke", email = "lukas.brunke@robotics.utias.utoronto.ca" }]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]
dependencies = ["numpy", "scipy"]

[project.optional-dependencies]
# Pick the backend you want; both are lazily imported, so installing just one
# is enough to use that plotter. ``viz`` is a convenience for both.
open3d = ["open3d"]
pyvista = ["pyvista"]
viz = ["open3d", "pyvista"]
examples = ["open3d", "pyvista", "pillow"]
dev = ["pytest", "pillow"]

[tool.hatch.build.targets.wheel]
packages = ["superquadrics"]
